@@ -15,6 +15,7 @@ Fixes:
 	- stride of all YUV video
 	- fix race condition in gstreamer render function on shutdown and file set.
 	- fix priority set/get for gstreamer.
+	- reset VLC pipeline on EOS.
 
 Improvements:
 
